--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm-run-all build gh-pages",
+    "gh-pages": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@types/uuid": "^8.3.0",
     "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.1.0",
+    "npm-run-all": "^4.1.5",
     "register-service-worker": "^1.7.1",
     "uuid": "^8.3.1",
     "vue": "^3.0.0",
+    "vue-i18n": "^9.0.0-beta.8",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.0.0-beta.1"
