--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@types/uuid": "^8.3.0",
     "bootstrap": "^4.5.3",
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.1",
     "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "register-service-worker": "^1.7.1",
-    "uuid": "^8.3.1",
-    "vue": "^3.0.0",
-    "vue-i18n": "^9.0.0-beta.8",
-    "vue-router": "^4.0.0-0",
+    "register-service-worker": "^1.7.2",
+    "uuid": "^8.3.2",
+    "vue": "^3.0.4",
+    "vue-i18n": "^9.0.0-beta.10",
+    "vue-router": "^4.0.1",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
@@ -34,12 +34,12 @@
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.0.4",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue": "^7.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3"
